media/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bark
  namespace: media
spec:
  type: NodePort
  selector:
    app: bark
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30883
---
apiVersion: v1
kind: Service
metadata:
  name: beszel
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: beszel
  ports:
  - port: 8090
    targetPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: media
spec:
  type: NodePort
  selector:
    app: gotify
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30881
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: igotify
  namespace: media
spec:
  type: NodePort
  selector:
    app: igotify
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30882
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  type: NodePort
  selector:
    app: jellyfin
  ports:
  - port: 8096
    targetPort: 8096
    nodePort: 30096
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: ollama
  ports:
  - port: 11434
    targetPort: 11434
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: open-webui
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  type: NodePort
  selector:
    app: plex
  ports:
  - port: 32400
    targetPort: 32400
    nodePort: 32400
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
  - name: http
    port: 7878
    targetPort: 7878
---
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: seerr
  ports:
  - port: 5055
    targetPort: 5055
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
  - port: 8989
    protocol: TCP
    targetPort: 8989
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: tautulli
  ports:
  - port: 8181
    targetPort: 8181
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: media
spec:
  type: NodePort
  selector:
    app: tdarr
  ports:
  - name: webui
    port: 8265
    targetPort: 8265
    nodePort: 30265
  - name: server
    port: 8266
    targetPort: 8266
    nodePort: 30266
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr-internal
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: tdarr
  ports:
  - name: webui
    port: 8265
    targetPort: 8265
---
apiVersion: v1
kind: Service
metadata:
  name: vpn-stack
  namespace: media
spec:
  type: NodePort
  selector:
    app: vpn-stack
  ports:
  - name: dispatcharr
    port: 9191
    targetPort: 9191
    nodePort: 30991
  - name: sabnzbd
    port: 8080
    targetPort: 8080
    nodePort: 30080
  - name: qbittorrent
    port: 8090
    targetPort: 8090
    nodePort: 30090
  - name: prowlarr
    port: 9696
    targetPort: 9696
    nodePort: 30696
  - name: byparr
    port: 8191
    targetPort: 8191
    nodePort: 30191
