media/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dispatcharr
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: dispatcharr.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vpn-stack
            port:
              number: 9191
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: jackett.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vpn-stack
            port:
              number: 9117
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: prowlarr.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vpn-stack
            port:
              number: 9696
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: qbittorrent.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vpn-stack
            port:
              number: 8090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: sabnzbd.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vpn-stack
            port:
              number: 8080
---
